--- a/nginx/template.conf
+++ b/nginx/template.conf
@@ -8,10 +8,10 @@ server {
     listen 443 ssl;
 
     ssl on;
-    ssl_certificate /etc/ssl/bundle.crt;
-    ssl_certificate_key /etc/ssl/empathycafe.ru.key;
+    ssl_certificate /etc/nginx/SSL/fullchain.cer;
+    ssl_certificate_key /etc/nginx/SSL/empathycafe.ru.key;
+
 
     server_name %SERVER_NAME%;
     return 301 %URL%;
 }
-~      
