--- a/nginx/template.conf
+++ b/nginx/template.conf
@@ -1,6 +1,17 @@
 server {
     listen 80;
+    server_name %SERVER_NAME%;
+    return 301 %URL%;
+}
+
+server {
     listen 443 ssl;
+
+    ssl on;
+    ssl_certificate /etc/nginx/SSL/fullchain.cer;
+    ssl_certificate_key /etc/nginx/SSL/empathycafe.ru.key;
+
+
     server_name %SERVER_NAME%;
     return 301 %URL%;
 }
