--- a/nginx/template.conf
+++ b/nginx/template.conf
@@ -8,8 +8,8 @@ server {
     listen 443 ssl;
 
     ssl on;
-    ssl_certificate /etc/nginx/SSL/fullchain.cer;
-    ssl_certificate_key /etc/nginx/SSL/empathycafe.ru.key;
+    ssl_certificate /etc/nginx/SSL/%DOMAIN%.fullchain.cer;
+    ssl_certificate_key /etc/nginx/SSL/%DOMAIN%.key;
 
 
     server_name %SERVER_NAME%;
